@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
 <!--
-Copyright 2012–2013 California Institute of Technology. ALL RIGHTS
+Copyright 2012–2017 California Institute of Technology. ALL RIGHTS
 RESERVED. U.S. Government Sponsorship acknowledged.
 -->
 <metadata>
-    <version>4</version>
+    <version>5</version> <!-- Profile 5 goes with edrn.rdf-1.3.6 and CancerDataExpo-2.0.5 --> 
     <description>EDRN RDF Service</description>
     <dependencies>
         <dependency>profile-plone.app.dexterity:default</dependency>
