@@ -22,4 +22,13 @@ RESERVED. U.S. Government Sponsorship acknowledged.
         handler='edrn.rdf.upgrades.upgrade3to4'
         sortkey='1'
     />
+    <genericsetup:upgradeStep
+        source='4'
+        destination='5'
+        title='Upgrade 4 to 5'
+        description='The edrn.rdf package has a couple new fields to handle from the DMCC in 4→5'
+        profile='edrn.rdf:default'
+        handler='edrn.rdf.upgrades.upgrade4to5'
+        sortkey='1'
+    />
 </configure>
